# libri

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile.dev  Makefile  README.md  Todo.md  compose.yml  pyproject.toml
backend/: auth.py  covers.py  database.py  main.py  models.py  update_catalogue.py
backend/tools/: isbn_export.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  AuthContext.tsx  BookDetail.tsx  ISBNDetail.tsx  Layout.tsx  Scan.tsx  index.css  main.tsx  useAuth.ts
infra/: Dockerfile  Dockerfile.dev  compose-dev.yml  pull-deploy.sh
